--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 
+#spring.jpa.database=mysql
+#server.port=2019
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/java-shoppingcart
+#spring.datasource.username=${username}
+#spring.datasrouce.password=${password}
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
+
+server.error.whitelabel.enabled=false
+server.port=2019
+#spring.jpa.hibernate.ddl-auto=create
+
+#spring.jpa.hibernate.ddl-auto=none
+management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:mysql://localhost:3306/javashoppingcart
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
+spring.datasource.username=${username}
+spring.datasource.password=${password}
