--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.initialization-mode=always
 
 server.error.whitelabel.enabled=false
 server.port=2019
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=none
 management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcartapp
