--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
 
 server.error.whitelabel.enabled=false
 server.port=2019
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=none
 management.endpoints.web.exposure.include=*
