--- a/shoppingcart/package.json
+++ b/shoppingcart/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^6.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
+    "lodash": "^4.17.11",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
