--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ server.port=2019
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=none
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcartapp
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcartapp?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#  UTC
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.datasource.username=${useradmin}
 spring.datasource.password=${userpassword}
