--- a/shoppingcart/package.json
+++ b/shoppingcart/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "cross-fetch": "^3.0.1",
     "dotenv": "^6.2.0",
     "enzyme": "^3.9.0",
