--- a/shoppingcart/package.json
+++ b/shoppingcart/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-testing-library": "^6.0.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
